# aws-whoami

./: README.md  aws_whoami.py  pyproject.toml
