[tool.poetry]
name = "aws-whoami"
version = "0.1.1"
description = "A tool to show what AWS account and identity you're using"
authors = ["Ben Kehoe <ben@kehoe.io>"]
license = "Apache-2.0"

[tool.poetry.scripts]
aws-whoami = 'aws_whoami:main'

[tool.poetry.dependencies]
python = ">=2.6, !=3.0.*, !=3.1.*, !=3.2.*"
boto3 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
