[tool.poetry]
name = "aws-whoami"
version = "1.1.0"
description = "A tool and library for determining what AWS account and identity you're using"
authors = ["Ben Kehoe <ben@kehoe.io>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/benkehoe/aws-whoami"
repository = "https://github.com/benkehoe/aws-whoami"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
aws-whoami = 'aws_whoami:main'

[tool.poetry.dependencies]
python = ">=2.6, !=3.0.*, !=3.1.*, !=3.2.*"
boto3 = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
